Adjust header to avoid whitespace issues and start styling

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,10 +1,44 @@
 :root {
-  --page-width: 600px
+  --page-width: 600px;
+  --hr-color: #BBBBBB;
+  --text-color: #000000;
 }
 
 /* Main */
 body {
   max-width: var(--page-width);
+  margin: auto;
+  background-color: var(--background);
+}
+@media only screen and (max-width: 616px) {
+  body { margin: 8px; }
+}
+header {
+  border-bottom: 1px solid var(--hr-color);
+}
+
+/* Navigation */
+header h1 {
+  margin-bottom: 0px; */
+}
+header nav ul {
+  margin-top: 8px;
+  padding: 0px;
+}
+header nav li {
+  display: inline;
+}
+
+header nav li + li {
+  margin-left: 0.5em;
+}
+
+header a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+header a:hover {
+  text-decoration: underline;
 }
 
 /* Generic width assertions */
